# Verba

./: .gitignore  CMakeLists.txt  debug.bat  dependencies.cmake  release.bat
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  debug.txt
src/: ai.c  blop.c  log.c  main.c  mem.c  tui.c
src/verba/: ai.h  blop.h  log.h  mem.h  tui.h
